# ha-climate-dashboard

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CODEBASE_AUDIT.md  GEMINI.md  README.md  pyproject.toml  tasks.py
config/: configuration.yaml  custom_components  home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal
config/.storage/: assist_pipeline.pipelines  auth  auth_provider.homeassistant  bluetooth.remote_scanners  climate_dashboard  core.area_registry  core.config  core.config_entries  core.device_registry  core.uuid  (+7 more)
design/: control_patterns.md  dashboard-mockup.html  data_model.md  data_model.mmd  data_model_ascii.md  device_interactions.md  generate_link.py  mockups.md  redesign_requirements.md  test.md  ui_strategy.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_actuators.py  test_circuit_conflict.py  test_circuit_home_away.py  test_circuit_legacy.py  test_circuit_lifecycle.py  test_circuit_race.py  test_climate_engine.py  test_climate_zone.py  test_configurations.py  test_demo_scenarios.py  test_external_sensor.py  test_home_away.py  test_hybrid_sync.py  test_integration.py  test_occupancy_setback.py  test_schedule.py  test_shared_actuators.py  test_storage.py  test_thermostat_sync.py  test_trv_auto.py  test_websocket.py  test_zone_integration.py
tools/: check_mqtt.py  clean_config_entries.py  demo_data.py  generate_icons.py  get_access_token.py  setup_demo_registries.py  setup_mqtt_device.py  teardown.py  update_mqtt_temp.py  update_trv_temp.py
(+38 files in other folders)
